--- a/style.css
+++ b/style.css
@@ -61,12 +61,10 @@
       display: none !important;
     }
 
-    li {
-      padding-left: 1.5em;
-      /* space for the indent */
-      text-indent: -1.5em;
-      /* pull first line back */
-    }
+      .content li {
+        padding-left: 1.5em;
+        text-indent: -1.5em;
+      }
 
     h3 {
       color: var(--accent-2);
